<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/openviewPass"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="#FFFFFF"
    android:foregroundTint="#512DA8"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/openprogressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:elevation="30dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/header"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/purple_500"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleOpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/title"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#3F51B5"
        android:textSize="34sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.025" />

    <EditText
        android:id="@+id/openUsername"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="Institute Email ID"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:text="@string/loginUN"
        android:textColor="#512DA8"
        android:textColorHint="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleOpen"
        tools:ignore="HardcodedText,TextContrastCheck" />

    <EditText
        android:id="@+id/openPass"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:text="@string/loginPW"
        android:textColor="#512DA8"
        android:textColorHint="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openUsername"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/openForgotpw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/openFPW"
        android:textColor="@color/purple_700"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/openRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openLogin"
        app:layout_constraintVertical_bias="0.225"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/openLogin"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:text="Log in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openPass"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/openRegister"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:text="Register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openLogin"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/_564116875598" />

</androidx.constraintlayout.widget.ConstraintLayout>